# FixMorph

./: .dockerignore  .gitignore  ASTParser.py  ASTVector.py  ASTcrochet.py  ASTgen.py  ASTparser.py  ArtiFact.Txt  CMakeLists.txt  CSParser.py  CSSlicer.py  Common.py  Crochet.py  Detection.py  Dockerfile  Dockerfile.16.04  Dockerfile.20.04  Dockerfile.experiments  Extraction.py  FixMorph.py  Initialization.py  LICENSE  Mapping.py  P_C_files  P_C_files.txt  PatchWeave.py  Print.py  Project.py  README.md  SymbolicExecution.py  TODO  TRAINING.md  Tests.py  Translation.py  Utils.py  Verifier.py  Weaver.py  a.out  ast-to-c.py  c-to-ast.py  (+29 more)
app/: main.py  main_training.py  pre_training.py
ast/: AST.py  ASTVector.py  ASTgen.py  Generator.py  Parser.py  Vector.py  ast.py  ast_generator.py  ast_vector.py  generator.py  parser.py
common/: Definitions.py  Utilities-bk.py  Utilities.py  Utils.py  Values.py  definitions.py  utilities.py  values.py
crochet-diff/: CMakeLists.txt  CrochetDiff.cpp
crochet-diff/crochet-diff/include/crochet/: ASTDiff.h
crochet-diff/crochet-diff/lib/: ASTDiff.cpp
crochet-diff/crochet-diff/tool/: CMakeLists.txt  CrochetDiff.cpp
crochet-diff/include/crochet/: ASTDiff.h  ASTDiffInternal.h
crochet-diff/lib/: ASTDiff.cpp
crochet-diff/tool/: CrochetDiff.cpp
crochet-patch/: CMakeLists.txt
crochet-patch/include/crochet/: ASTDiff.h  ASTPatch.h
crochet-patch/include/crochet-patch/Tooling/: ASTMutate.h
crochet-patch/lib/: ASTDiff.cpp  ASTPatch.cpp
crochet-patch/lib/Tooling/: ASTMutate.cpp
crochet-patch/tool/: CMakeLists.txt  CrochetPatch.cpp
data/: standard-data-type-list  standard-function-list  standard-macro-list
deckard-config/: config
doc/: Examples.md  GetStart.md  Manual.md
docker/: Dockerfile
entity/: Project.py  project.py
logs/: log-1567133534.35  log-1567134216.1  log-1569211283.8781781  log-1569211289.2654295  log-1572500627.6408947  log-1572501557.7980509  log-1572501586.832149  log-1572501678.830659  log-1572501745.259555  log-1572502038.4981441  log-1572502051.5807042  log-1572502088.5973244  log-1572502196.889183  log-1572502493.8744361  log-1572502499.7255483  log-1572502515.4481065  log-1572502755.2441676  log-1572502791.7856343  log-1572502847.958958  log-1572503826.5946739  log-1572503842.2686822  log-1572503864.5722327  log-1572503878.2060764  log-1572504600.798524  log-1572504657.5373783  log-1572504684.5823479  log-1572504696.7247643  log-1572504733.3185692  log-1572504770.521502  log-1572504788.350149  log-1572504808.5241625  log-1572504834.0859928  (+106 more)
(+1488 files in other folders)
